# Mixture-of-Memory

./: .gitignore  CLUSTERS.md  CODE_REVIEW_REQUEST.md  EVAL_DESIGN.md  FIX_PLAN.md  LOCOMO_EVAL_SETUP.md  README.md  RESEARCH_LITERATURE.md  RESEARCH_REPORT.md  RMT_DATA_GUIDE.md  UPDATELOG.md  V2_DESIGN.md  eval_ruler_baseline.py  heartbeat_monitor.py  launch_2048_v4.sh  pyproject.toml  requirements.txt  run_32k_eval.sh  run_eval.sh  run_eval_fixed.sh  run_eval_nih.sh  run_eval_ruler.sh  run_eval_slot.sh  run_eval_stage3.sh  run_eval_test.sh  run_eval_v9.sh  run_hard_bench.sh  run_locomo_v4.sh  run_locomo_v4_direct.sh  run_nih_eval.sh  run_nih_extended.sh  run_nih_extended_base.sh  run_nih_hard_base.sh  run_nih_smoke.sh  run_nih_zh.sh  run_ppl_v10.sh  run_ppl_v4.sh  run_ruler_baseline.sh  run_v8_nih.sh
.xac/: project.yaml
configs/: base.yaml  remote_experiments.json  remote_experiments_backup.json  synthetic.yaml
data_generation/: rmt_data_preprocessing.py
eval_results/: eval_results.json
results/: ruler_cwe_smoke.json
scripts/: IMPLEMENTATION_SUMMARY_multisegment.md  README_LOCOMO_EVAL.md  README_nih_multisegment.md  _force_launch_stage2.sh  _launch_concat_fusion_5k.sh  _launch_concat_fusion_5k_full.sh  _launch_phase1_v6.sh  _launch_stage2.sh  _launch_v5.sh  _launch_v5_debug.sh  _launch_v5_final.sh  _launch_v5_smaller.sh  _run_concat_5k.sh  _run_phase1_final.sh  _run_phase1_test.sh  _run_phase1_val.sh  _smoke_test.sh  benchmark_mac.py  build_l2_from_messages.py  build_l3_from_l2.py  check_remote_logs.py  convert_jsonl_to_npy.py  convert_locomo.py  debug_ctx2048_d025.py  debug_ctx2048_minimal.py  debug_eval_memory.py  debug_eval_rmt_v10.py  debug_forward.py  debug_nih_verbose.py  debug_rmt_ablation.py  debug_rmt_inference.py  demo_compare.py  demo_single.py  diag_memory_write.py  diag_v8_mask_bug.py  dispatch_relaunch.py  dispatch_remote_training.py  download_dialog_data.py  eval_base_ppl.py  eval_baseline_ppl.py  (+148 more)
src/: __init__.py
status/: BACKUP_APPROACHES_READY.md  CODER_INFERENCE_DEBUG.md  CODER_RMT_DEBUG.md  COMPUTE_RESOURCES_CRISIS.md  COORDINATION_FAILURE_EXPOSED.md  DECISION_POINT_GPU_UTILIZATION.md  EMERGENCY_GPU_BLOCKED.md  GPU_OPPORTUNITY.md  HEARTBEAT_EMERGENCY_STATUS.md  INFRASTRUCTURE_PROGRESS_UPDATE.md  INFRASTRUCTURE_ROOT_CAUSE_EXPOSED.md  ISSUES.jsonl  REMOTE_RESULTS_SUMMARY.md  RESEARCHER_REPORTS.jsonl  RESEARCH_EMERGENCY_COORDINATION_FAILURE.md  RESEARCH_PLAN_REVISION_NEEDED.md  (+10 more)
(+194 files in other folders)
